# Pendulum_Gazebo

./: ANALYSIS_swing_failure.py  DIAGNOSTIC_swing.py  PENJELASAN_SWING_FAILURE.txt  README.md  SIMULASI_GAZEBO_ROS2.md  lib_com.py  lib_data.py  lib_gui.py  lib_gui_graph.py  lib_stick.py  lib_udp.py  main.py  pendulum-monitoring.py  stickTest.py  test_cart_movement.py  test_manual_swing.py  test_swing_debug.py  trialUDPuser.py
data_exports/: README.md  capture_swing_balance_runtime.py  interpret_runtime_exports.py  pendulum_real_ws_data.csv  ros2_pendulum_ws_data.csv  runtime_swing_balance_interpreted_summary.csv  runtime_swing_balance_samples.csv  runtime_swing_balance_summary.csv  ws_method_comparison.csv
logs/: log_20251113_111555.csv  log_20251113_135902.csv  log_20251113_142415.csv  log_20251113_145404.csv  log_20251113_151747.csv  log_20251113_153659.csv  log_20251113_155240.csv  log_20251113_155954.csv  log_20251113_160937.csv  log_20251114_132724.csv  log_20251114_132924.csv  log_20251114_152624.csv  log_20251114_155051.csv  log_20251114_163044.csv  log_20251114_163611.csv  log_20251114_164628.csv  log_20251117_100212.csv  log_20251117_104408.csv  (+18 more)
ros2_pendulum_ws/src/linear_inverted_pendulum_sim/: DOKUMENTASI_METODE_KONTROL.txt  README.md  package.xml  setup.cfg  setup.py
ros2_pendulum_ws/src/linear_inverted_pendulum_sim/launch/: sim.launch.py
ros2_pendulum_ws/src/linear_inverted_pendulum_sim/linear_inverted_pendulum_sim/: sim_serial_bridge.py
ros2_pendulum_ws/src/linear_inverted_pendulum_sim/urdf/: linear_inverted_pendulum.urdf.xacro
(+58 files in other folders)
