<?xml version="1.0"?>
<package format="3">
  <name>linear_inverted_pendulum_sim</name>
  <version>0.1.0</version>
  <description>ROS 2 Jazzy and Gazebo Harmonic simulation for the LIP01 linear inverted pendulum trainer.</description>
  <maintainer email="ammar@example.com">Ammar</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
